--- a/style.css
+++ b/style.css
@@ -1,49 +1,163 @@
+@import url("https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap');
-
-body{
-    margin: 0;
-    font-family: "Saira", sans-serif;
+body {
+  margin: 0;
+  font-family: "Saira", sans-serif;
 }
-.nav{
-    background-color: #333;
-    color: #fff;
-    position: fixed;
-    z-index: 0;
-    width: 100%;
+.nav {
+  background-color: #333;
+  color: #fff;
+  position: fixed;
+  z-index: 0;
+  width: 100%;
 }
-h1{
-    margin: 0;
-    
+h1 {
+  margin: 0;
 }
-.flex{
-    display: flex;
+.flex {
+  display: flex;
 }
-.around{
-    justify-content: space-around;
+.around {
+  justify-content: space-around;
 }
-.btnbox{
+.center {
+  justify-content: center;
+}
+.beet{
+    justify-content: space-between;
+}
+.medel{
+    align-items: center;
+}
+.btnbox {
+  height: 40px;
+  border: 1px solid #4680ff;
+  border-radius: 100px;
+}
+.btn {
+  height: 40px;
+  width: auto;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 10px;
+}
+.cr {
+  background-color: #4681ff00;
+  border: none;
+  outline: none;
+  color: #4680ff;
+  cursor: pointer;
+  font-family: "Saira", sans-serif;
+  border-radius: 100px;
+}
+.active {
+  background-color: #4680ff;
+  color: #fff;
+}
+.darkbox {
+  background-color: #00000054;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 101;
+}
+.popup {
+  background-color: #fff;
+  width: 400px;
+  height: auto;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 102;
+  border-radius: 10px;
+}
+.underline {
+  text-align: center;
+  color: #fff;
+  background-color: #4680ff;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+.inputbox {
+  display: flex;
+  margin: 10px;
+  border: 1px solid #4680ff;
+}
+.input-tag {
+  width: 100%;
+  height: 40px;
+  border: none;
+  outline: none;
+  padding-left: 10px;
+}
+.input-icon{
     height: 40px;
-    border: 1px solid #4680ff;
-    border-radius: 100px;
-}
-.btn{
-    height: 40px;
-    width: auto;
-    padding-left: 10px;
-    padding-right: 10px;
+    width: 40px;
     border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #464646;
 }
-.cr{
-    background-color: #4681ff00;
-    border: none;
-    outline: none;
-    color: #4680ff;
-    cursor: pointer;
-    font-family: "Saira", sans-serif;
-    border-radius: 100px;
+.pointer {
+  cursor: pointer;
 }
-.active{
-    background-color: #4680ff;
-    color: #fff;
+#send{
+  background-color: #4680ff;
+  color: #fff;
+  border: none;
+  outline: none;
+  width: 80%;
+  cursor: pointer;
 }
+.icon{
+    font-size: 1.5rem;
+    padding: 10px;
+}
+.vcc{
+    display: none;
+}
+
+
+/* Thsis is a demo  */
+.test{
+    background-color: red;
+}
+.close{
+   animation: closes 0.5s forwards;
+}
+@keyframes closes {
+    0% {
+      transform: scale(1);
+      opacity: 1;
+    }
+    100% {
+      transform: scale(0);
+      opacity: 0;
+    }
+  }
+  
+  .open{
+    animation: opens 0.5s forwards;
+ }
+ @keyframes opens {
+     0% {
+       transform: scale(0);
+       opacity: 0;
+     }
+     100% {
+       transform: scale(1);
+       opacity: 1;
+     }
+   }
+   @media (max-width: 768px) {
+   .popup{
+    width: 90%;
+   }
+   .mblogo{
+    display: none;
+   }
+    
+   }
